--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,95 @@
 *, ::after, ::before {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
-/* .logo {
+html {
+    scroll-behavior: smooth;
+}
+
+body {
+    margin: 0 auto;
+    max-width: 1024px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 300;
+    color: white;
+    background-color: #202020;
+    /* background: linear-gradient(to bottom, #323232 0%, #3F3F3F 40%, #1C1C1C 150%), linear-gradient(to top, rgba(255,255,255,0.40) 0%, rgba(0,0,0,0.25) 200%);
+    background-blend-mode: multiply; */
+}
+
+li {
+    list-style: none;
+}
+
+#header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
+    padding-bottom: 0;
+    position: sticky;
+    background-color: #202020;
+    top: 0;
+    z-index: 1;
+}
+
+/* LOGO */
+
+.logo {
     display: flex;
     align-items: center;
-} */
+    gap: 10px;
+}
+
+#header-img {
+    background: rgb(255,215,0);
+    background: radial-gradient(circle, rgba(255,215,0,1) 10%, rgba(221,186,0,1) 30%, rgba(173,146,0,1) 60%, rgba(145,123,0,1) 100%);
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
+
+}
+
+#logo__text {
+    display: flex;
+    flex-direction: column;
+    color: #d7b900;
+    font-weight: 400;
+
+}
+
+.original__span {
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.1rem;
+}
+
+.trombones__span {
+    position: relative;
+    font-family: 'Birthstone Bounce', cursive;
+    font-size: 2.8rem;
+    top: -18px;
+    left: -5px;
+
+}
+
+/* menú de navegación */
+
+ul {
+    width: 500px;
+    display: flex;
+    font-size: 1.3rem;
+    justify-content: space-between;
+}
+
+a {
+    display: block;
+    text-decoration: none;
+    color: inherit;
+}
+
+/* MAIN */
+
+main {
+}
