Cambios ligeros realizados

--- a/styles.css
+++ b/styles.css
@@ -157,6 +157,7 @@ main {
     text-transform: uppercase;
     border-radius: 4px;
     background: var(--linear-gold-gradient);
+    cursor: pointer;
 }
 
 /* FEATURES SECTION */
@@ -195,8 +196,10 @@ iframe {
 }
 
 .product {
-    margin: 10px;
+    margin: 1rem;
     width: calc(100%/3);
+    min-width: 14rem;
+    max-width: 17rem;
     background: var(--dark-white);
     color: var(--light-black);
     text-align: center;
