--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@ html {
 }
 
 body {
+    min-width: 320px;
     margin: 0 auto;
     font-family: 'Poppins', sans-serif;
     font-weight: 300;
@@ -104,7 +105,6 @@ a {
     display: block;
     text-decoration: none;
     color: inherit;
-/*     color: var(--prueba); */
 }
 
 a:hover {
@@ -264,4 +264,35 @@ footer p {
     font-size: 0.8rem;
     margin: 0 20px;
     margin-bottom: 20px;
+}
+
+/* MEDIA QUERIES */
+
+@media (max-width: 768px) {
+    #header {
+        padding: 0 2rem;
+        padding-bottom: 1rem;
+        align-items: center;
+    }
+
+    ul {
+        flex-direction: column;
+        font-size: 1.3rem;
+        justify-content: space-evenly;
+    }
+
+    #howitworks {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    #pricing {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    footer {
+        align-items: center;
+    }
 }
