--- a/styles.css
+++ b/styles.css
@@ -120,6 +120,9 @@ main {
 /* GET STARTED SECTION */
 
 .getstarted {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
 }
 
@@ -294,5 +297,9 @@ footer p {
 
     footer {
         align-items: center;
+    }
+
+    nav ul li {
+        margin: 0.3rem 0;
     }
 }
