--- a/styles.css
+++ b/styles.css
@@ -302,4 +302,13 @@ footer p {
     nav ul li {
         margin: 0.3rem 0;
     }
+
+    #header-img {
+        display: none;
+    }
+
+    #header {
+        display: flex;
+        justify-content: space-evenly;
+    }
 }
