--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@ li {
     gap: 10px;
 }
 
-#header-img {
+#header-img2 {
     display: block;
     background: var(--clean-gold);
     background: var(--radial-gold-gradient);
@@ -65,6 +65,11 @@ li {
     height: 4rem;
     border-radius: 50%;
 
+}
+
+#header-img {
+    position: absolute;
+    display: none;
 }
 
 #logo__text {
